Creates menu and adjust the activities according with the packages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,22 +17,21 @@
         android:theme="@style/Theme.EcoAlert"
         tools:targetApi="31">
         <activity
-            android:name="br.com.ecoalert.MainActivity"
-            android:exported="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-        </activity>
-        <activity
-            android:name="br.com.ecoalert.report.ui.ReportActivity"
+            android:name=".ui.home.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="br.com.ecoalert.MainActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name="br.com.ecoalert.ui.report.ReportActivity"
+            android:exported="true">
         </activity>
     </application>
 
