--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.EcoAlert"
         tools:targetApi="31">
         <activity
-            android:name=".ui.home.HomeActivity"
+            android:name="br.com.ecoalert.ui.splashscreen.SplashscreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="br.com.ecoalert.MainActivity"
+            android:name=".ui.home.HomeActivity"
             android:exported="true">
         </activity>
         <activity
